<resources>
    <string name="app_name">GTScore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="name_reg">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="description">Description</string>






    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_add_game">Add Game</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_add_match">Add Match</string>
    <string name="title_activity_match">Match</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_tournament">Tournament</string>
    <string name="title_activity_create_message">Create Message</string>

    <string name="notifications_admin_channel_name">GTScore</string>
    <string name="notifications_admin_channel_description">CS4261</string>
    <string name="title_activity_add_contact">Add Contact</string>

</resources>
