<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameGameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_reg" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/descriptionGameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>